--- a/recipes-kernel/linux/linux-ldkit-4.19/mys6ul14x14/dts/Makefile
+++ b/recipes-kernel/linux/linux-ldkit-4.19/mys6ul14x14/dts/Makefile
@@ -5,7 +5,9 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	mys-imx6ul-14x14-evk-gpmi-weim-myb6ulx-lcd070.dtb \
 	mys-imx6ul-14x14-evk-gpmi-weim-myb6ulx.dtb \
 	mys-imx6ul-14x14-evk-gpmi-weim.dtb \
-	mys-imx6ul-14x14-evk.dtb
+	mys-imx6ul-14x14-evk.dtb \
+	mys6ul14x14-0.dtb \
+	mys6ul14x14-1.dtb
 
 endif
 
