define 3 pins as gpio's on exp. board

--- a/recipes-kernel/linux/linux-ldkit/mys6ul14x14/dts/myb-6ul.dtsi
+++ b/recipes-kernel/linux/linux-ldkit/mys6ul14x14/dts/myb-6ul.dtsi
@@ -29,6 +29,10 @@
 				MX6UL_PAD_UART2_RX_DATA__ECSPI3_SCLK	0x100b1
 				MX6UL_PAD_UART2_CTS_B__ECSPI3_MOSI		0x100b1
 				MX6UL_PAD_UART2_RTS_B__ECSPI3_MISO		0x100b1
+				/* GPIOs */
+				MX6UL_PAD_JTAG_MOD__GPIO1_IO10      0x1b0b0
+				MX6UL_PAD_NAND_CE1_B__GPIO4_IO14    0x1b0b0
+				MX6UL_PAD_NAND_DQS__GPIO4_IO16      0x1b0b0
 				>;
 		};
 
@@ -61,7 +65,7 @@
 				MX6UL_PAD_SNVS_TAMPER8__GPIO5_IO08	0x1b0b0
 			>;
 		};
-    };
+	};
 };
 
 &ecspi3 {
